test/errors/type/str/endswith2.yasl
mt.lookup('', .endswith)(1, .true)
